Fixed bug #43353 (wrong detection of 'data' wrapper causes notice)